data/derived/sp14/progs/unify/prog1746.ml.out
Characters 74-76:
  let placement =  10 ** place  in
                   ^^
Error: This expression has type int but an expression was expected of type
         float
